[package]
name = "pica"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
futures-util = "0.3.25"
hex = "0.4.3"
hmac = "0.12.1"
hyper = "0.14.23"
rand = "0.8.5"
regex = "1.7.0"
reqwest = { git = "https://github.com/seanmonstar/reqwest.git", branch = "master", features = ["socks"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
sha2 = "0.10.6"
tokio = { version = "1.21.2", features = ["macros"] }
urlencoding = "2.1.2"

[features]
