[package]
name = "pica"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
hex = "0.4"
hmac = "0.12"
hyper = { version = "0.14", features = ["client"] }
rand = "0.8"
regex = "1.10"
reqwest = { version = "0.11", features = ["socks"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.35", features = ["macros"] }
urlencoding = "2.1"

[features]
