[package]
name = "pica"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
hmac = "0.12"
hyper = { version = "0.14", features = ["client"] }
reqwest = { version = "0.11", features = ["socks", "trust-dns"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.35", features = ["macros"] }
urlencoding = "2.1"
base64 = "0.21"
thiserror = "1.0"

[dev-dependencies]
wiremock = "0.6"
